--- a/template/default/index/css/ylyy.css
+++ b/template/default/index/css/ylyy.css
@@ -53,17 +53,17 @@
 .index_title_bg_left{
   display:inline-block;
   vertical-align: top;
-  width: 2.8em;;
-    height: 2.8em;;
-    line-height: 2.8em;;  background:url(../img/sample/title_bg_left.png);
+  width: 50px;
+    height: 50px;
+    line-height: 50px;  background:url(../img/sample/title_bg_left.png);
 background-position: left center;  background-repeat: no-repeat;
 }
 .index_title_bg_right{
   display:inline-block;
   vertical-align: top;
-  width: 2.8em;;
-    height: 2.8em;;
-    line-height: 2.8em;;
+  width: 50px;
+    height: 50px;
+    line-height: 50px;
   background:url(../img/sample/title_bg_right.png);
 background-position: left center;  background-repeat: no-repeat;
 }
@@ -88,6 +88,13 @@ background-position: left center;  background-repeat: no-repeat;
 .index_news_list_tem{width:350px;border-top:1px dashed #fff;float:left;color:#fff;margin-left: 75px;
  }
 .index_news_list_tem:first-child{ margin-left: 0;}
+.index_new .index_title_bg_left{
+  background-image:url(../img/sample/news_left.png);
+}
+.index_new .index_title_bg_right{
+  background-image:url(../img/sample/news_right.png);
+}
+
 /* 首页产品 */
 .index_pr{width:100%;min-width:1200px;margin:0 auto; background:url(../img/sample/index_pr1.png) no-repeat center top ; }
 .index_prs{width:1200px;margin:0 auto;}
@@ -180,73 +187,3 @@ font-weight: bold;
   .fcities .flink_list ul li a:hover {
     color: #036aac;
   }
-/* 首页底部 */
-
-.footer .col {
-    float: left;
-    color: #fff;
-    margin: 25px 0;
-}
-.footer .col1 {
-    width: 230px;
-}
-.footer .col1 h1{
-  font-size: 20px;
-  padding-bottom: 20px;
-
-}
-.footer .col2 {
-    width: 470px;
-}
-.footer .col2 h1{
-  font-size: 20px;
-  padding-bottom: 20px;
-
-}
-.footer .col li {
-    font-size: 14px;
-    list-style: none;
-    height: 35px;
-    line-height: 35px;
-}
-.footer .col p {
-    font-size: 14px;
-    list-style: none;
-    height: 35px;
-    line-height: 35px;
-}
-.footer .foot3 {
-  border-top: 1px solid #909399;
-}
-
-.inner {
-  width: 1200px;
-    margin: 0 auto;
-    padding-top: 20px;
-    color: #fff;
-    font-size: 12px;
-    box-sizing: border-box;
-}
-.footer .ewm img {
-    width: 100%;
-    display: inline;
-}
-.footer .contact {
-    width: 100%;
-    height: 300px;
-    position: relative;
-    margin-bottom: 10px;
-}
-.footer .contact div {
-    position: absolute;
-    width: 120px;
-    height: 120px;
-    top: 45px;
-    line-height: normal;
-}
-.footer .contact p {
-  line-height: normal;
-}
-.footer .contact div:nth-child(2) {
-    left: 190px;
-}
