--- a/template/default/index/css/yunu.css
+++ b/template/default/index/css/yunu.css
@@ -1912,7 +1912,7 @@ body {
 }
 
 .header .head_top_content .head_logo .head_text p i {
-  color: #E69138;
+  color: #ae3523;
   font-style: normal;
 }
 
@@ -1946,7 +1946,7 @@ body {
 
 .header .head_top_content .fr p span {
   display: block;
-  color: #FF9900;
+  color: #ae3523;
   font-size: 20px;
 }
 
@@ -1980,33 +1980,40 @@ body {
 }
 
 .header .head_nav ul li .v_list {
+  border-top: 2px solid #ae3523;
+
   position: absolute;
   width: 100%;
   top: 43px;
-  background: #086AAC;
+  background: rgba(255,255,255,.5);
   left: 0;
   z-index: 99;
   display: none;
+  text-align: center;
 }
 
 .header .head_nav ul li .v_list a {
-  width: 100%;
-  color: #fff;
+  width: 80%;
+  margin: 0 auto;
+  color: #666666;
   line-height: 36px;
   font-size: 14px;
   transition: .5s;
   text-align: center;
   display: block;
+  border-bottom: 1px solid transparent;
+
 }
 
 .header .head_nav ul li .v_list a:hover {
-  border-bottom: 2px solid #ae3523;
   color: #ae3523;
+  font-weight: bold;
+  /* border-bottom: 1px solid #ae3523; */
+
 }
 
 .header .head_nav ul li:hover > a {
   color: #ae3523;
-  border-bottom: 2px solid #ae3523;
 
 }
 
@@ -2044,7 +2051,7 @@ body {
 }
 
 .pc_banner .pcbanner .pagination span.swiper-pagination-bullet-active {
-  background: #036aac;
+  background: #ae3523;
   color: #fff;
 }
 
@@ -2324,7 +2331,7 @@ body {
 }
 
 .m_banner .mbanner .pagination span.swiper-pagination-bullet-active {
-  background: #036aac;
+  background: #ae3523;
   color: #fff;
 }
 
@@ -2511,8 +2518,8 @@ body {
   display: inline-block;
   font-style: normal;
   font-weight: bold;
-  height: 2.8em;
-  line-height: 2.8em;
+  height: 50px;
+  line-height: 50px;
   font-size: 28px;
   text-align: center;
   color: #575757;
@@ -2588,6 +2595,11 @@ body {
   zoom: 1;
   *display: inline;
   margin-right: 18px;
+}
+.i_box2 .i_box2_content .i_box2_content1 .i_box2_menu a:hover {
+  border: 3px solid #ae3523;
+  background-color:#ae3523;
+  color: #fff;
 }
 
 .i_box2 .i_box2_content .fr {
@@ -2883,7 +2895,7 @@ body {
 .footer {
   width: 100%;
   overflow: hidden;
-  padding: 40px 0;
+  padding: 40px 0 0;
    background: #333333;
 }
 
@@ -3720,7 +3732,7 @@ div.zoomMask {
 }
 .right_fix .text li .text1 .search {
   position: relative;
-  background: #036aac;
+  background: #ae3523;
   padding: 8px;
 }
 .right_fix .text li .text1 .inp1 {
@@ -3744,7 +3756,7 @@ div.zoomMask {
 }
 
 .right_fix .text li:hover {
-  background: #036aac;
+  background: #ae3523;
   cursor: pointer;
 }
 .right_fix .text li:hover .pic .img1 {
@@ -3922,27 +3934,79 @@ div.zoomMask {
     background: #ccc;
 }
 
+/* 首页底部 */
 
+.footer .col {
+  float: left;
+  color: #fff;
+  margin: 25px 0;
+}
+.footer .col1 {
+  width: 180px;
+}
+.footer .col1 h1{
+font-size: 16px;
+padding-bottom: 20px;
 
+}
+.footer .col2 {
+  width: 470px;
+}
+.footer .col2 h1{
+font-size: 16px;
+padding-bottom: 20px;
 
+}
+.footer .col li {
+  font-size: 14px;
+  list-style: none;
+  height: 35px;
+  line-height: 35px;
+}
+.footer .col li a {
+  color: #999999;
+}
+.footer .col p {
+  font-size: 14px;
+  list-style: none;
+  height: 35px;
+  line-height: 35px;
+  color: #999999;  
+}
+.footer .foot3 {
+  width:100%;min-width:1200px; background:#000;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.footer .inner {
+width: 1200px;
+  margin: 0 auto;
+  padding: 5px;
+  line-height:35px;color:#999999;font-size:16px;
+  box-sizing: border-box;
+}
+.footer .ewm img {
+  width: 100%;
+  display: inline;
+}
+.footer .contact {
+  width: 100%;
+  height: 300px;
+  position: relative;
+  margin-bottom: 10px;
+}
+.footer .contact div {
+  position: absolute;
+  width: 120px;
+  height: 120px;
+  top: 45px;
+  line-height: normal;
+}
+.footer .contact p {
+line-height: normal;
+}
+.footer .contact div:nth-child(2) {
+  left: 190px;
+}
 
 
 
