--- a/template/default/index/index_index.html
+++ b/template/default/index/index_index.html
@@ -64,7 +64,7 @@
         mySwiper.autoplay.stop();
       }
     </script>
-    <div class="banner_text clearfix">
+    <div class="banner_text clearfix no">
       <div class="center clearfix">
         <div class="banner_text_content clearfix">
           <img class="imgleft" id="imgleft" src="__PUBLIC__/img/jb.png" alt="图片名">
@@ -435,6 +435,7 @@
       </div>
     </div>
     <!-- 城市 -->
+    
     <div class="  fcities">
       <div class="center  pt50 pb50">
         <div class="pt15 pb15 ">
