--- a/template/default/index/public_footer.html
+++ b/template/default/index/public_footer.html
@@ -5,27 +5,41 @@
             <h1>网站导航</h1>
             <yunu:nav typeid='1'>
                 <li  >
-                      <span class="service"></span><a class="full" href="{$nav.url}"><span>{$nav.title}</span></a>
+                     - <span class="service"></span><a class="full" href="{$nav.url}"><span>{$nav.title}</span></a>
                 </li>
             </yunu:nav>
 
           </section>
+          <section class="col col1">
+            <h1>产品分类</h1>
+            <yunu:catlist cid='21'>
+                <li  >
+                     - <span class="service"></span><a class="full" href="{$catlist.url}"><span>{$catlist.title}</span></a>
+                </li>
+            </yunu:catlist>
 
+          </section>
+          <section class="col col1">
+            <h1>新闻资讯</h1>
+            <yunu:catlist cid='28'>
+                <li  >
+                     - <span class="service"></span><a class="full" href="{$catlist.url}"><span>{$catlist.title}</span></a>
+                </li>
+            </yunu:catlist>
+
+          </section>
           <section class="col col2">
             <h1>联系我们</h1>
             <p><span class="icon icon1">地址：</span><span><yunu:block name='dizhi' /></span></p>
-            <p><span class="icon icon2">电话：</span><span style="color:#FFF">024-</span><span style="color:#FFF"><yunu:block name='dianhua' /></span></p>
+            <p><span class="icon icon2">电话：</span><span >024-</span><span ><yunu:block name='dianhua' /></span></p>
             <p><span class="icon icon2">手机：</span><yunu:block name='shouji' /></span></p>
             <p><span class="icon icon3">邮箱：</span><span><yunu:block name='email' /></span></p>
           </section>
 
           <section class="col col3">
-            <div class="contact tac">
-              <div class="ewm"><img style="max-width:100%; max-height:100%; display:inline;" src="__PUBLIC__/img/ewm.png">
-                <p>亿霖订阅号</p>
-              </div>
+            <div class="contact tac">    
               <div class="ewm"><yunu:block name='ewm' />
-                <p>亿霖服务号</p>
+                <p>亿霖公众号</p>
               </div>
             </div>
           </section>
@@ -35,7 +49,7 @@
 
       </div>
 
-      <div class="foot3">
+      <div class="foot3" style="">
         <div class="inner">
           <yunu:config name="site_copyright" />
         </div>
